--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,26 @@
-stages:          
-  - execute-script
+# stages:          
+#   - execute-script
 
 
-variables:
-  GIT_STRATEGY: clone
+# variables:
+#   GIT_STRATEGY: clone
 
-# Job pour les événements "issue"
-execute-python-on-issue-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
+# # Job pour les événements "issue"
+# execute-python-on-issue-update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
  
 
-# Job pour les événements "merge_request"
-execute-python-on-pr-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
+# # Job pour les événements "merge_request"
+# execute-python-on-pr-update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
 
 
 
@@ -78,3 +78,30 @@ execute-python-on-pr-update:
 #     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
 #   rules:
 #     - if: '$CI_PIPELINE_SOURCE == "web" || ($CI_PIPELINE_SOURCE == "trigger" && $CI_PARENT_PIPELINE_ID == null)'
+
+
+
+
+
+
+stages:          
+  - execute-script
+
+variables:
+  GIT_STRATEGY: clone
+
+# Job pour les événements "issue"
+execute-python-on-issue-update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "web" || $CI_PIPELINE_SOURCE == "trigger"'
+
+# Job pour les événements "merge_request"
+execute-python-on-pr-update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "web" || $CI_PIPELINE_SOURCE == "trigger"'
