--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -248,25 +248,27 @@
 #     - if: '$CI_PIPELINE_SOURCE == "web" || $CI_PIPELINE_SOURCE == "trigger"'
 
 
-
 stages:
   - execute-script
 
 variables:
   GIT_STRATEGY: clone
 
-# Job pour les événements "issue"
+# Job pour synchroniser les issues
 execute-python-on-issue-update:
   stage: execute-script
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" && $CI_JOB_EVENT == "issue"'
+    - if: '$CI_PIPELINE_SOURCE == "web"'
+      when: always
 
-# Job pour les événements "merge_request"
+# Job pour synchroniser les PRs
 execute-python-on-pr-update:
   stage: execute-script
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" && $CI_JOB_EVENT == "merge_request"'
+    - if: '$CI_PIPELINE_SOURCE == "web"'
+      when: always
+
