update a file .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ execute-python-on-issue-update:
   rules:
     # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
     - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"' 
+    - if: '$CI_PIPELINE_SOURCE == "main"' 
 
 # Job pour les événements "merge_request"
 execute-python-on-pr-update:
@@ -42,7 +42,7 @@ execute-python-on-pr-update:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"' 
+    - if: '$CI_PIPELINE_SOURCE == "main"' 
 
 # Job de débogage pour vérifier le contexte du pipeline
 debug_pipeline:
