--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,6 +84,72 @@
 
 
 
+# stages:
+#   - execute-script
+#   - build
+#   - test
+#   - deploy
+
+# variables:
+#   GIT_STRATEGY: clone
+
+# execute-python-on-issue-update:
+#   stage: execute-script
+#   script:
+#     - if [ "$RUN_SCRIPT" == "true" ]; then python3 /home/gitlab-runner/scripts-secures/script_issue.py; fi
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "issue" && ($CI_COMMIT_REF_NAME == "main" || $CI_COMMIT_REF_NAME == "master")'
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_REF_NAME == "main"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
+# execute-python-on-pr-update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
+# debug_pipeline:
+#   stage: execute-script
+#   script:
+#     - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
+#     - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
+#     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
+# build-job:
+#   stage: build
+#   script:
+#     - echo "Compiling the code..."
+#     - echo "Compile complete."
+
+# unit-test-job:
+#   stage: test
+#   script:
+#     - echo "Running unit tests... This will take about 60 seconds."
+#     - sleep 60
+#     - echo "Code coverage is 90%"
+
+# lint-test-job:
+#   stage: test
+#   script:
+#     - echo "Linting code... This will take about 10 seconds."
+#     - sleep 10
+#     - echo "No lint issues found."
+
+# deploy-job:
+#   stage: deploy
+#   environment: production
+#   script:
+#     - echo "Deploying application..."
+#     - echo "Application successfully deployed."
+
+
+
+
+
 stages:
   - execute-script
   - build
@@ -93,32 +159,33 @@ stages:
 variables:
   GIT_STRATEGY: clone
 
+# Job pour synchroniser les issues
 execute-python-on-issue-update:
   stage: execute-script
   script:
-    - if [ "$RUN_SCRIPT" == "true" ]; then python3 /home/gitlab-runner/scripts-secures/script_issue.py; fi
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "issue" && ($CI_COMMIT_REF_NAME == "main" || $CI_COMMIT_REF_NAME == "master")'
-    - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_REF_NAME == "main"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'  # S'exécute uniquement pour les pipelines déclenchés manuellement ou via un webhook
 
+# Job pour synchroniser les merge requests
 execute-python-on-pr-update:
   stage: execute-script
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'  # S'exécute pour les événements de merge request
 
+# Job de débogage pour vérifier le contexte du pipeline
 debug_pipeline:
   stage: execute-script
   script:
-    - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
-    - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
-    - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
+    - echo "CI_PIPELINE_SOURCE: $CI_PIPELINE_SOURCE"
+    - echo "CI_COMMIT_REF_NAME: $CI_COMMIT_REF_NAME"
+    - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'  # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
 
+# Jobs de build, test et deploy
 build-job:
   stage: build
   script:
@@ -145,6 +212,10 @@ deploy-job:
   script:
     - echo "Deploying application..."
     - echo "Application successfully deployed."
+
+
+
+
 
 
 
