--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -159,8 +159,6 @@
 #     - echo "Application successfully deployed."
 
 
-
-
 stages:
   - execute-script
   - build
@@ -170,15 +168,21 @@ stages:
 variables:
   GIT_STRATEGY: clone
 
+workflow:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "issue"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_REF_NAME == "main"'
+    - when: never  # Ignore tous les autres déclencheurs
+
 # Job pour les événements "issue"
 execute-python-on-issue-update:
   stage: execute-script
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
-  interruptible: true  # Permet l'annulation de ce job
+    - if: '$CI_PIPELINE_SOURCE == "issue"'
+  interruptible: true
 
 # Job pour les événements "merge_request"
 execute-python-on-pr-update:
@@ -186,16 +190,26 @@ execute-python-on-pr-update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+  interruptible: true
+
+# Job de débogage pour vérifier le contexte du pipeline
+debug_pipeline:
+  stage: execute-script
+  script:
+    - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
+    - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
+    - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
+  rules:
     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-  interruptible: true  # Permet l'annulation de ce job
+  interruptible: true
 
 build-job:
   stage: build
   script:
     - echo "Compiling the code..."
     - echo "Compile complete."
-  interruptible: true  # Permet l'annulation de ce job
+  interruptible: true
 
 unit-test-job:
   stage: test
@@ -203,7 +217,7 @@ unit-test-job:
     - echo "Running unit tests... This will take about 60 seconds."
     - sleep 60
     - echo "Code coverage is 90%"
-  interruptible: true  # Permet l'annulation de ce job
+  interruptible: true
 
 lint-test-job:
   stage: test
@@ -211,7 +225,7 @@ lint-test-job:
     - echo "Linting code... This will take about 10 seconds."
     - sleep 10
     - echo "No lint issues found."
-  interruptible: true  # Permet l'annulation de ce job
+  interruptible: true
 
 deploy-job:
   stage: deploy
