update a file .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,6 @@
 #     - if: '$CI_PIPELINE_SOURCE == "trigger"' 
  
 
-
 stages:  
   - execute-script
 
@@ -37,7 +36,7 @@ variables:
 debug-variables:
   stage: execute-script
   script:
-    - echo CI_PIPELINE_SOURCE: "$CI_PIPELINE_SOURCE"
+    - echo "CI_PIPELINE_SOURCE: $CI_PIPELINE_SOURCE"
   rules:
     - when: always
 
